# Wave_project

./: .gitignore  README.md  requirements.txt
.semaphore/: semaphore.yml
doc/: .gitignore  clean.sh  main.tex
project_cpp/: CMakeLists.txt
project_cpp/src/: CMakeLists.txt  SteerablePyramid.cpp  SteerablePyramid.h  main.cpp  utils.h
project_cpp/test/: CMakeLists.txt  test_compilation.cpp  test_filters.cpp
src/: ComplexGaborFilters.py  LCP_computation.py  LPC_computation.py  LPC_parameters.py  SteerablePyramid.py  detect_Blur.py  test_filters.py
test/: LPC_parameters.py
